# dino_game

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
src/dino/: block.py  constants.py  enemy.py  level.py  main.py  player.py  spritesheet.py  version.py  world.py
src/dino/assets/: __init__.py
src/dino/assets/levels/: level_1.json  level_1.lvl  level_2.json  level_2.lvl  level_3.json  level_3.lvl  level_4.json  level_4.lvl
src/dino/assets/sprites/: dinos.py  spritesheet.py
src/dino/blocks/: basic.py  death.py  invisible.py  moving.py  player_spawn.py  spawn.py  win.py
src/dino/entities/: enemy.py  entity.py  player.py
