[metadata]
name = dino
author = Tyler Westland, Aaron Ruen
author-email = westlatr@mail.uc.edu ruenan@mail.uc.edu
url = https://github.com/I-question-this/the_wizards_helper
description = 
long-description = file: README.md, LICENSE
license = MIT
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.8
install_requires =
  pygame == 2.0.0
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

